--- a/EmployeesExample.Www/tsconfig.json
+++ b/EmployeesExample.Www/tsconfig.json
@@ -9,6 +9,9 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true, // Workaround for https://github.com/angular/angular/issues/17863. Remove this if you upgrade to a fixed version of Angular.
     "strict": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictFunctionTypes": false,
     "lib": [ "es6", "dom" ],
     "types": [ "webpack-env" ]
   },
